k8s-manifests/commuter.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: commuter-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: commuter-notebook.local
    http:
      paths:
      - path: /
        backend:
          serviceName: commuter-notebook
          servicePort: 4000

---

apiVersion: v1
kind: Service
metadata:
  name: commuter-notebook
spec:
  type: ClusterIP
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
  selector:
    app: commuter
    expose: notebook

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: commuter-notebook
spec:
  selector:
    matchLabels:
      app: commuter
      expose: notebook
  template:
    metadata:
      labels:
        app: commuter
        expose: notebook
    spec:
      containers:
      - name: commuter
        image: commuter:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 4000
